[package]
name = "terra-node"
version = "0.1.0"
edition = "2021"

[lib]
name = "terra_node"
path = "src/lib.rs"

[[bin]]
name = "terra-node"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
